force-app/main/default/objects/Relationship_Strength__c/Relationship_Strength__c.object-meta.xml
<CustomObject>
    <description>Stores pre-computed relationship strength between two entities (Contact-Account, Contact-Contact, Contact-Opportunity).</description>
    <label>Relationship Strength</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Strength Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationship Strengths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>