force-app/main/default/objects/Relationship_Strength__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The account context for this relationship strength calculation.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationship Strengths</relationshipLabel>
    <relationshipName>Relationship_Strengths</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>