force-app/main/default/objects/Relationship_Strength__c/fields/Co_Occurrence_Count__c.field-meta.xml
<CustomField>
    <fullName>Co_Occurrence_Count__c</fullName>
    <description>Number of times both entities appeared on the same email thread or meeting.</description>
    <defaultValue>0</defaultValue>
    <label>Co-occurrence Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>