force-app/main/default/objects/Relationship_Strength__c/fields/Interaction_Count__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Count__c</fullName>
    <description>Total number of interactions between source and target.</description>
    <defaultValue>0</defaultValue>
    <label>Interaction Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>