force-app/main/default/objects/Relationship_Strength__c/fields/Last_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Last_Calculated__c</fullName>
    <description>When this strength score was last calculated.</description>
    <label>Last Calculated</label>
    <type>DateTime</type>
</CustomField>