force-app/main/default/objects/Relationship_Strength__c/fields/Last_Interaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Interaction_Date__c</fullName>
    <description>Date of the most recent interaction between source and target.</description>
    <label>Last Interaction Date</label>
    <type>DateTime</type>
</CustomField>