force-app/main/default/objects/Relationship_Strength__c/fields/Source_Contact__c.field-meta.xml
<CustomField>
    <fullName>Source_Contact__c</fullName>
    <description>The source contact in this relationship.</description>
    <label>Source Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Outgoing Relationships</relationshipLabel>
    <relationshipName>Outgoing_Relationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>