force-app/main/default/objects/Relationship_Strength__c/fields/Strength__c.field-meta.xml
<CustomField>
    <fullName>Strength__c</fullName>
    <description>Normalized relationship strength score (0.0 to 1.0).</description>
    <label>Strength</label>
    <precision>5</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>