force-app/main/default/objects/Relationship_Strength__c/fields/Strength_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Strength_Breakdown__c</fullName>
    <description>JSON-serialized factor breakdown for the relationship strength score. Used by the LWC detail panel to show which factors contributed to the score.</description>
    <label>Strength Breakdown</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>