force-app/main/default/objects/Relationship_Strength__c/fields/Strength_Reason__c.field-meta.xml
<CustomField>
    <fullName>Strength_Reason__c</fullName>
    <description>Human-readable explanation of why this relationship has its current strength score. Generated from interaction data during strength calculation.</description>
    <label>Strength Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>