force-app/main/default/objects/Relationship_Strength__c/fields/Target_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_Type__c</fullName>
    <description>The SObject type of the target record (Account, Contact, Opportunity).</description>
    <label>Target Object Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>