force-app/main/default/objects/Relationship_Strength__c/fields/Target_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Id__c</fullName>
    <description>The ID of the target record (Account, Contact, or Opportunity). Using text to support polymorphic relationships.</description>
    <label>Target Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>